--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
+
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint src/**/*.js",
+  "format": "prettier --write src/**/*.js",
+  "format:lint": "npm run format && npm run lint",
+  "clear": "rimraf dist .parcel-cache"
   },
+
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -34,5 +40,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/eslint-parser": "^7.5.4",
+    "eslint": "^8.17.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.30.0",
+    "prettier": "^2.7.1",
+    "rimraf": "^3.0.2"
   }
 }
