--- a/package.json
+++ b/package.json
@@ -8,21 +8,21 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.js",
-  "format": "prettier --write src/**/*.js",
-  "format:lint": "npm run format && npm run lint",
-  "clear": "rimraf dist .parcel-cache"
+    "format": "prettier --write src/**/*.js",
+    "format:lint": "npm run format && npm run lint",
+    "clear": "rimraf dist .parcel-cache"
   },
-
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.5.4",
+    "@babel/preset-react": "^7.17.12",
     "eslint": "^8.17.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
